@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man
-.TH MINMAX  "1" " " "minmax Antiprism 0.23 - http://www.antiprism.com" "User Commands"
+.TH MINMAX  "1" " " "minmax Antiprism 0.24.pre01 - http://www.antiprism.com" "User Commands"
 .SH NAME
 minmax - optimal spherical tesselations
 .SH SYNOPSIS
@@ -28,6 +28,9 @@ length changing algorithm
 .IP
 v \- shortest and longest edges attached to a vertex (default)
 a \- shortest and longest of all edges
+u \- make unit edge polyhedon (\fB\-l\fR controls planarity,
+.IP
+ignore \fB\-p\fR, \fB\-E\fR)
 .HP
 \fB\-p\fR <mthd> method of placement onto a unit sphere:
 .IP
@@ -41,6 +44,18 @@ rest of the vertices at a point on the other side
 .IP
 axis lengths (for a superellipsoid an optional fourth number
 gives the power)
+.TP
+\fB\-L\fR <lim>
+minimum change of distance/width_of_model to terminate, as
+.IP
+negative exponent (default: 16 giving 1e\-16)
+.TP
+\fB\-z\fR <n>
+status checking and reporting every n iterations, \fB\-1\fR for no
+status (default: 1000)
+.TP
+\fB\-q\fR
+quiet, do not print status messages
 .HP
 \fB\-o\fR <file> write output to file (default: write to standard output)
 .SH "SEE ALSO"
