@@ -5,6 +5,8 @@ xx-xx-13 Adrian Rossiter <adrian@antiprism.com>
          New Programs
             to_nfold: change the rotational symmetry of a polyhedron
          Changes
+            minmax: new option -a u, make faces regular. Improve
+              reporting.
          Fixes
 
 Version 0.23
